--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,10 @@
                 },
                 {
                     "key": "Access-Control-Allow-Origin",
+                    "value": "http://localhost:3000"
+                },
+                {
+                    "key": "Access-Control-Allow-Origin",
                     "value": "https://locat-storie.vercel.app/"
                 },
                 {
